--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.14",
@@ -38,6 +37,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-bootstrap": "^0.24.5"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "jest-dom": "^4.0.0",
+    "react-testing-library": "^8.0.1"
   }
 }
