CC-0-add-codeclimate: add upload coverage config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,11 @@
+executors:
+  cypress:
+    docker:
+      - image: cypress/base:12
+        environment:
+          TERM: xterm
+    working_directory: ~/iCommerce
+
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
@@ -5,13 +13,12 @@ workflows:
   node-tests:
     jobs:
       - node/test
+version: 2.1
 jobs:
   test:
+    executor: cypress
     environment:
       CC_TEST_REPORTER_ID: 3498ce0f780b1fdddb255c461daea02ad3fbbc20b03f3c889390d01db9b00863
-    docker:
-      - image: "mileschou/xdebug:7.3"
-    working_directory: ~/iCommerce
     steps:
       - checkout
       - run:
@@ -24,13 +31,6 @@ jobs:
           command: |
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
-      - run:
-          name: Run tests
-          command: |
-            sudo docker-php-ext-enable xdebug
-            ./cc-test-reporter before-build
-            sudo vendor/bin/phpunit --coverage-clover clover.xml
-            ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?
       -run:
           name: Run coverage tests
           command: yarn test-coverage
