--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,13 @@ executors:
           TERM: xterm
     working_directory: ~/iCommerce
 
+commands:
+  restore_yarn_install:
+    steps:
+      - restore_cache:
+          name: Restore Cache [yarn install]
+          key: yarn-modules-{{ checksum "yarn.lock" }}
+
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
@@ -18,28 +25,15 @@ jobs:
     executor: cypress
     environment:
       CC_TEST_REPORTER_ID: 3498ce0f780b1fdddb255c461daea02ad3fbbc20b03f3c889390d01db9b00863
-    docker:
-      - image: "mileschou/xdebug:7.3"
-    working_directory: ~/iCommerce
     steps:
       - checkout
-      - run:
-          name: Setup dependencies
-          command: |
-            sudo composer self-update
-            composer install -n --prefer-dist
+      - restore_yarn_install
       - run:
           name: Setup Code Climate test-reporter
           command: |
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
-      - run:
-          name: Run tests
-          command: |
-            sudo docker-php-ext-enable xdebug
             ./cc-test-reporter before-build
-            sudo vendor/bin/phpunit --coverage-clover clover.xml
-            ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?
       - run:
           name: Run coverage tests
           command: yarn test-coverage
