CC-0-add-codeclimate: add upload coverage config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,9 +55,10 @@ jobs:
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
             ./cc-test-reporter before-build
+      - run: npm install
       - run:
           name: Run coverage tests
-          command: yarn test-coverage
+          command: npm run test-coverage
       - run:
           name: Upload code coverage
           command: |
