--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.7.0",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.14",
     "@types/react-router-dom": "^5.1.6",
@@ -14,6 +16,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^17.0.1",
     "typescript": "^4.0.3"
   },
   "scripts": {
@@ -39,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
     "@types/react-router-bootstrap": "^0.24.5",
     "react-testing-library": "^8.0.1"
   }
