--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^9.3.2",
     "@testing-library/react-hooks": "^3.7.0",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.14",
     "@types/react-router-dom": "^5.1.6",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.3",
     "jest-dom": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -17,6 +20,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-test-renderer": "^17.0.1",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.12",
     "typescript": "^4.0.3"
   },
   "scripts": {
